--- a/notebooks/test_notebook.ipynb
+++ b/notebooks/test_notebook.ipynb
@@ -39,6 +39,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yoyo = 2 *3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yoyo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -47,9 +76,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:nf] *",
+   "display_name": "Python (reco_base)",
    "language": "python",
-   "name": "conda-env-nf-py"
+   "name": "reco_base"
   },
   "language_info": {
    "codemirror_mode": {
