more work with the light-fm model

--- a/notebooks/modelling/collaborative_filtering_lightfm.ipynb
+++ b/notebooks/modelling/collaborative_filtering_lightfm.ipynb
@@ -275,8 +275,15 @@
     }
    ],
    "source": [
-    "news.head(3)"
+    "news.ti"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -301,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +326,7 @@
        "(49108, 5)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +455,7 @@
        "4  U13740  N18445     1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,6 +463,20 @@
    "source": [
     "behaviors_part_1_set.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataframe for Article Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -473,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,18 +505,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User ID overlap in train and test split:     9519 / 10000 \n",
-      "Article ID overlap in train and test split:  11490 / 21798\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#user_intersection = set(train.user_id) & set(test.user_id)\n",
     "#article_intersection = set(train.article) & set(test.article)\n",
@@ -529,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,472 +555,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>article</th>\n",
-       "      <th>N1001</th>\n",
-       "      <th>N10016</th>\n",
-       "      <th>N10021</th>\n",
-       "      <th>N10024</th>\n",
-       "      <th>N10025</th>\n",
-       "      <th>N10034</th>\n",
-       "      <th>N10040</th>\n",
-       "      <th>N10041</th>\n",
-       "      <th>N10047</th>\n",
-       "      <th>N10048</th>\n",
-       "      <th>...</th>\n",
-       "      <th>N9955</th>\n",
-       "      <th>N9958</th>\n",
-       "      <th>N996</th>\n",
-       "      <th>N9969</th>\n",
-       "      <th>N997</th>\n",
-       "      <th>N9973</th>\n",
-       "      <th>N9974</th>\n",
-       "      <th>N9977</th>\n",
-       "      <th>N9978</th>\n",
-       "      <th>N9992</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>U10022</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U10043</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U10045</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U10059</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U10062</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 16597 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "article  N1001  N10016  N10021  N10024  N10025  N10034  N10040  N10041  \\\n",
-       "user_id                                                                  \n",
-       "U10022     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "U10043     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "U10045     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "U10059     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "U10062     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "\n",
-       "article  N10047  N10048  ...  N9955  N9958  N996  N9969  N997  N9973  N9974  \\\n",
-       "user_id                  ...                                                  \n",
-       "U10022      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "U10043      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "U10045      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "U10059      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "U10062      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "\n",
-       "article  N9977  N9978  N9992  \n",
-       "user_id                       \n",
-       "U10022     NaN    NaN    NaN  \n",
-       "U10043     NaN    NaN    NaN  \n",
-       "U10045     NaN    NaN    NaN  \n",
-       "U10059     NaN    NaN    NaN  \n",
-       "U10062     NaN    NaN    NaN  \n",
-       "\n",
-       "[5 rows x 16597 columns]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#original_matrix.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>article</th>\n",
-       "      <th>N1001</th>\n",
-       "      <th>N10016</th>\n",
-       "      <th>N10021</th>\n",
-       "      <th>N10024</th>\n",
-       "      <th>N10025</th>\n",
-       "      <th>N10034</th>\n",
-       "      <th>N10040</th>\n",
-       "      <th>N10041</th>\n",
-       "      <th>N10047</th>\n",
-       "      <th>N10048</th>\n",
-       "      <th>...</th>\n",
-       "      <th>N9955</th>\n",
-       "      <th>N9958</th>\n",
-       "      <th>N996</th>\n",
-       "      <th>N9969</th>\n",
-       "      <th>N997</th>\n",
-       "      <th>N9973</th>\n",
-       "      <th>N9974</th>\n",
-       "      <th>N9977</th>\n",
-       "      <th>N9978</th>\n",
-       "      <th>N9992</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>U10022</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U10043</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U10045</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U10059</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>U10062</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 16597 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "article  N1001  N10016  N10021  N10024  N10025  N10034  N10040  N10041  \\\n",
-       "user_id                                                                  \n",
-       "U10022     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "U10043     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "U10045     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "U10059     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "U10062     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
-       "\n",
-       "article  N10047  N10048  ...  N9955  N9958  N996  N9969  N997  N9973  N9974  \\\n",
-       "user_id                  ...                                                  \n",
-       "U10022      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "U10043      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "U10045      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "U10059      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "U10062      NaN     NaN  ...    NaN    NaN   NaN    NaN   NaN    NaN    NaN   \n",
-       "\n",
-       "article  N9977  N9978  N9992  \n",
-       "user_id                       \n",
-       "U10022     NaN    NaN    NaN  \n",
-       "U10043     NaN    NaN    NaN  \n",
-       "U10045     NaN    NaN    NaN  \n",
-       "U10059     NaN    NaN    NaN  \n",
-       "U10062     NaN    NaN    NaN  \n",
-       "\n",
-       "[5 rows x 16597 columns]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#original_matrix = original_matrix.astype(np.float64)\n",
     "#original_matrix.head()"
@@ -1016,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
